--- a/interfacesweb/PruebaNivel/Estilo.css
+++ b/interfacesweb/PruebaNivel/Estilo.css
@@ -8,7 +8,6 @@ body {
 .cajaPrincipal {
     display: flex;
     flex-direction: column;
-    width: 375px;
     height: auto;
 }
 
@@ -86,6 +85,7 @@ body {
 .itemsObtenidosSegundoBusqueda {
     font-size: 20px;
     font-weight: 600;
+    text-align: center;
 }
 
 .productosOrdenarPrincipal {
@@ -177,6 +177,11 @@ body {
     border-radius: 50%;
     right: 1rem;
     top: 1rem;
+    transition: all 0.25s;
+}
+
+.corazonProductoIndividual:hover{
+    scale: 1.1;
 }
 
 .informacionProductoIndividual {
